# homedash-rs

./: .dockerignore  .gitignore  .prettierrc  Cargo.toml  Dockerfile  LICENSE.md  README.md  branding  build.sh  components.json  package.json  pnpm-lock.yaml  renovate.json  tailwind.config.ts  tsconfig.json  tuono.config.ts
.gitea/workflows/: ci.yaml
.github/workflows/: ci.yml
public/: manifest.json
src/: app.rs  config.rs  cookie.rs  database.rs  lib.rs  oauth.rs  ping.rs  system_metrics.rs
src/components/: dashboard.tsx  data-section.tsx  loading-spinner.tsx  unduck.tsx  weather-widget.tsx
src/components/data-cards/: adguard.tsx  docker.tsx  overseerr.tsx  proxmox.tsx  qbittorrent.tsx  starr.tsx  tautulli.tsx
src/components/ui/: button.tsx  card.tsx  input.tsx  tooltip.tsx
src/lib/: utils.ts
src/routes/: __layout.tsx  index.rs  index.tsx
src/routes/api/: health_check.rs  metrics.rs  ping.rs  save.rs
src/routes/api/adguard/: stats.rs
src/routes/api/dockwatch/: overview.rs
src/routes/api/overseerr/: requests.rs  requests_count.rs
src/routes/api/plex/: library_count.rs
src/routes/api/prowlarr/: stats.rs
src/services/: mod.rs
src/services/adguard/: mod.rs
src/services/dockwatch/: mod.rs
src/services/overseerr/: mod.rs
src/services/plex/: mod.rs
src/services/prowlarr/: mod.rs
src/services/proxmox/: mod.rs
src/services/qbittorrent/: mod.rs
src/services/radarr/: mod.rs
src/services/sonarr/: mod.rs
src/services/tautulli/: mod.rs
src/services/tmdb/: mod.rs
src/services/tvdb/: mod.rs
src/styles/: global.css  globals.css
(+9 files in other folders)
