[package]
name = "homedash-rs"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "tuono"
path = ".tuono/main.rs"

[patch.crates-io]
ssr_rs = { git = "https://github.com/nzxl101/ssr-rs" }

[dependencies]
tuono_lib = "0.19.7"
serde = { version = "1.0.202", features = ["derive"] }
config = "0.15.8"
serde_derive = "1.0.217"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
serde_json = "1.0.139"
rusqlite = { version = "0.33.0", features = ["bundled"] }
base64 = "0.22.1"
quick-xml = { version = "0.37.2", features = ["serialize"] }
sysinfo = { version = "0.33.1", features = ["serde"] }
# openssl = { version = "0.10", features = ["vendored"] }

